@@ -1,18 +1,18 @@
 package com.beneboba.product_service.service;
 
 import com.beneboba.product_service.entity.Product;
-import com.beneboba.product_service.producer.ProductProducer;
+import com.beneboba.product_service.exception.ProductNotFoundException;
+import com.beneboba.product_service.exception.StockNotEnoughException;
+import com.beneboba.product_service.model.ProductRequest;
+import com.beneboba.product_service.model.ProductsRequest;
 import com.beneboba.product_service.repository.ProductRepository;
-import com.beneboba.product_service.util.ObjectConverter;
-import org.example.common.Order;
-import org.example.common.OrderEvent;
-import org.example.common.OrderItem;
+import com.beneboba.product_service.service.ProductService;
+import com.beneboba.product_service.util.ValidationService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.kafka.core.KafkaTemplate;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
@@ -20,130 +20,127 @@ import reactor.test.StepVerifier;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
-class ProductServiceTest {
+public class ProductServiceTest {
 
     @Mock
     private ProductRepository productRepository;
 
     @Mock
-    private KafkaTemplate<String, String> kafkaTemplate;
-
-    @Mock
-    private ObjectConverter objectConverter;
+    private ValidationService validationService;
 
     @InjectMocks
-    private ProductProducer productService;
+    private ProductService productService;
 
     @BeforeEach
-    void setUp() {
+    public void setup() {
         MockitoAnnotations.openMocks(this);
-        productService.sagaTopic = "test-saga-topic";
     }
 
-//    @Test
-//    void testGetAllProducts() {
-//        Product product1 = new Product(1L, "Product 1", 10.0f,null,null, null, 5, null, null);
-//        Product product2 = new Product(2L, "Product 2", 20.0f,null,null, null, 3, null, null);
-//        when(productRepository.findAll()).thenReturn(Flux.just(product1, product2));
-//
-//        StepVerifier.create(productService.getAllProducts())
-//                .expectNext(product1)
-//                .expectNext(product2)
-//                .verifyComplete();
-//    }
-
-//    @Test
-//    void testCreateProduct() {
-//        Product product = new Product(1L, "Product 1", 10.0f,null,null, null, 5, null, null);
-//        when(productRepository.save(any(Product.class))).thenReturn(Mono.just(product));
-//
-//        StepVerifier.create(productService.createProduct(product))
-//                .expectNext(product)
-//                .verifyComplete();
-//    }
-
     @Test
-    void testReserveProductsSuccess() {
-        String sagaId = "saga-123";
-        OrderEvent orderEvent = createSampleOrderEvent();
-        Product product1 = new Product(1L, "Product 1", 10.0f,null,null, null, 5, null, null);
-        Product product2 = new Product(2L, "Product 2", 20.0f,null,null, null, 3, null, null);
+    public void testGetAllProducts() {
+        Product product = new Product();
+        product.setId(1L);
+        product.setName("Product 1");
+        when(productRepository.findAll()).thenReturn(Flux.just(product));
 
-        when(productRepository.findById(1L)).thenReturn(Mono.just(product1));
-        when(productRepository.findById(2L)).thenReturn(Mono.just(product2));
-        when(productRepository.save(any(Product.class))).thenReturn(Mono.just(product1)).thenReturn(Mono.just(product2));
-        when(objectConverter.convertObjectToString(any())).thenReturn("event-string");
-
-        StepVerifier.create(productService.reserveProducts(sagaId, orderEvent))
+        StepVerifier.create(productService.getAllProducts())
+                .expectNextMatches(p -> p.getName().equals("Product 1"))
                 .verifyComplete();
-
-        verify(kafkaTemplate).send(eq("test-saga-topic"), anyString());
     }
 
     @Test
-    void testReserveProductsNotEnoughStock() {
-        String sagaId = "saga-123";
-        OrderEvent orderEvent = createSampleOrderEvent();
-        Product product = new Product(1L, "Product 1", 10.0f,null,null, null, 0, null, null);
+    public void testCreateProduct() {
+        Product product = new Product();
+        product.setId(1L);
+        product.setName("Product 1");
+        when(productRepository.save(any(Product.class))).thenReturn(Mono.just(product));
+
+        StepVerifier.create(productService.createProduct(product))
+                .expectNextMatches(p -> p.getName().equals("Product 1"))
+                .verifyComplete();
+    }
+
+    @Test
+    public void testReserveProducts() {
+        ProductRequest productRequest = new ProductRequest();
+        productRequest.setProductId(1L);
+        productRequest.setQuantity(1);
+
+        ProductsRequest productsRequest = new ProductsRequest();
+        productsRequest.setProducts(List.of(productRequest));
+
+        Product product = new Product();
+        product.setId(1L);
+        product.setStockQuantity(10);
+        product.setPrice(100f);
+
+        when(validationService.validate(productsRequest)).thenReturn(Mono.just(productsRequest));
+        when(productRepository.findById(1L)).thenReturn(Mono.just(product));
+        when(productRepository.save(any(Product.class))).thenReturn(Mono.just(product));
+
+        StepVerifier.create(productService.reserveProducts(productsRequest))
+                .expectNextMatches(response -> response.getTotalAmount() == 100f)
+                .verifyComplete();
+    }
+
+    @Test
+    public void testReleaseProducts() {
+        ProductRequest productRequest = new ProductRequest();
+        productRequest.setProductId(1L);
+        productRequest.setQuantity(1);
+
+        ProductsRequest productsRequest = new ProductsRequest();
+        productsRequest.setProducts(List.of(productRequest));
+
+        Product product = new Product();
+        product.setId(1L);
+        product.setStockQuantity(10);
 
         when(productRepository.findById(1L)).thenReturn(Mono.just(product));
-        when(productRepository.findById(2L)).thenReturn(Mono.just(product));
-        when(objectConverter.convertObjectToString(any())).thenReturn("event-string");
+        when(productRepository.save(any(Product.class))).thenReturn(Mono.just(product));
 
-        StepVerifier.create(productService.reserveProducts(sagaId, orderEvent))
-                .verifyError();
-
-        verify(kafkaTemplate).send(eq("test-saga-topic"), anyString());
-    }
-
-    @Test
-    void testReserveProductsProductNotFound() {
-        String sagaId = "saga-123";
-        OrderEvent orderEvent = createSampleOrderEvent();
-
-        when(productRepository.findById(1L)).thenReturn(Mono.empty());
-        when(objectConverter.convertObjectToString(any())).thenReturn("event-string");
-
-        StepVerifier.create(productService.reserveProducts(sagaId, orderEvent))
-                .verifyError();
-
-        verify(kafkaTemplate).send(eq("test-saga-topic"), anyString());
-    }
-
-    @Test
-    void testReleaseProducts() {
-        String sagaId = "saga-123";
-        OrderEvent orderEvent = createSampleOrderEvent();
-        Product product1 = new Product(1L, "Product 1", 10.0f,null,null, null, 5, null, null);
-        Product product2 = new Product(2L, "Product 2", 20.0f,null,null, null, 3, null, null);
-
-        when(productRepository.findById(1L)).thenReturn(Mono.just(product1));
-        when(productRepository.findById(2L)).thenReturn(Mono.just(product2));
-        when(productRepository.save(any(Product.class))).thenReturn(Mono.just(product1)).thenReturn(Mono.just(product2));
-        when(objectConverter.convertObjectToString(any())).thenReturn("event-string");
-
-        StepVerifier.create(productService.releaseProducts(sagaId, orderEvent))
+        StepVerifier.create(productService.releaseProducts(productsRequest))
                 .verifyComplete();
-
-        verify(kafkaTemplate).send(eq("test-saga-topic"), anyString());
     }
 
-    private OrderEvent createSampleOrderEvent() {
-        Order order = new Order();
-        order.setId(1L);
-        order.setTotalAmount(0.0f);
+    @Test
+    public void testReserveProductsNotFound() {
+        ProductRequest productRequest = new ProductRequest();
+        productRequest.setProductId(1L);
+        productRequest.setQuantity(1);
 
-        OrderItem product1 = new OrderItem(1L, 2L, 0.0f, 1, 1L);
-        OrderItem product2 = new OrderItem(2L, 1L, 0.0f, 1,1L);
-        List<OrderItem> products = Arrays.asList(product1, product2);
+        ProductsRequest productsRequest = new ProductsRequest();
+        productsRequest.setProducts(List.of(productRequest));
 
-        OrderEvent orderEvent = new OrderEvent();
-        orderEvent.setOrder(order);
-        orderEvent.setProducts(products);
+        when(validationService.validate(productsRequest)).thenReturn(Mono.just(productsRequest));
+        when(productRepository.findById(1L)).thenReturn(Mono.empty());
 
-        return orderEvent;
+        StepVerifier.create(productService.reserveProducts(productsRequest))
+                .expectError(ProductNotFoundException.class)
+                .verify();
+    }
+
+    @Test
+    public void testReserveProductsNotEnoughStock() {
+        ProductRequest productRequest = new ProductRequest();
+        productRequest.setProductId(1L);
+        productRequest.setQuantity(10);
+
+        ProductsRequest productsRequest = new ProductsRequest();
+        productsRequest.setProducts(List.of(productRequest));
+
+        Product product = new Product();
+        product.setId(1L);
+        product.setStockQuantity(5);
+
+        when(validationService.validate(productsRequest)).thenReturn(Mono.just(productsRequest));
+        when(productRepository.findById(1L)).thenReturn(Mono.just(product));
+
+        StepVerifier.create(productService.reserveProducts(productsRequest))
+                .expectError(StockNotEnoughException.class)
+                .verify();
     }
 }
